{
  "version": 4,
  "terraform_version": "1.10.5",
  "serial": 8,
  "lineage": "4bb4df2f-99bc-1b3c-1b65-e2095e520ca6",
  "resources": [
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_instance",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011899242bb902164",
            "arn": "arn:aws:ec2:us-east-1::instance/i-a415a51dde2bb9c61",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-a415a51dde2bb9c61",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-344eb5e9ce1a0c4fc",
            "private_dns": "ip-10-133-148-153.ec2.internal",
            "private_ip": "10.133.148.153",
            "public_dns": "ec2-54-214-223-225.compute-1.amazonaws.com",
            "public_ip": "54.214.223.225",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-29945c59c755c2d04",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a7648f9970fd2686e",
            "tags": {
              "Name": "WebServer-1"
            },
            "tags_all": {
              "Name": "WebServer-1"
            },
            "tenancy": "default"
          }
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-011899242bb902164",
            "arn": "arn:aws:ec2:us-east-1::instance/i-b72f2a09988e539d2",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-b72f2a09988e539d2",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "monitoring": false,
            "primary_network_interface_id": "eni-78fa12307a8995e45",
            "private_dns": "ip-10-92-164-248.ec2.internal",
            "private_ip": "10.92.164.248",
            "public_dns": "ec2-54-214-173-217.compute-1.amazonaws.com",
            "public_ip": "54.214.173.217",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 0,
                "throughput": 0,
                "volume_id": "vol-f03e90c946faf8fc0",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-a7648f9970fd2686e",
            "tags": {
              "Name": "WebServer-2"
            },
            "tags_all": {
              "Name": "WebServer-2"
            },
            "tenancy": "default"
          }
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instances",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:000000000000:security-group/sg-922134170735f5cae",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-922134170735f5cae",
            "ingress": [],
            "name": "instance-security-group",
            "name_prefix": "",
            "owner_id": "000000000000",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-073f70cdfac49cf98"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.web_app",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-756433245",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-922134170735f5cae",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.web_app.aws_security_group.instances"
          ]
        }
      ]
    }
  ]
}